Add service layer for operations

--- a/public/index.html
+++ b/public/index.html
@@ -58,5 +58,13 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="bower_components/angular/angular.js"></script>
     <script src="app.js"></script>
+    <script src="controllers/OperationCtrl.js"></script>
+    <script src="services/OperationSvc.js"></script>
+    <script src="services/CalculatorSvc.js"></script>
+    <script src="services/AddSvc.js"></script>
+    <script src="services/SubtractSvc.js"></script>
+    <script src="services/MultiplySvc.js"></script>
+    <script src="services/DivideSvc.js"></script>
+    <script src="services/ServiceFactory.js"></script>
   </body>
 </html>
