Add Jasmine unit tests

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
   </head>
   <body>
-  <div class="container" ng-controller="OperationCtrl">
+  <div class="container" ng-controller="OperationCtrl as op">
     <div class="row">
     	<div class=".col-md-6 .col-md-offset-3">
     		<div class="page-header">
@@ -18,30 +18,30 @@
 		    	<div class="row">
 		  			<div class="col-lg-6">
 				    	<div class="form-group">
-				    		<select ng-model="operation" ng-options="item.name for item in operations" class="form-control input-lg" id="operators">
+				    		<select ng-model="op.operation" ng-options="item.name for item in op.operations" class="form-control input-lg" id="operators">
 
 				    		</select>
 				    		<input ng-model="value" class="form-control input-lg" type="number" placeholder="enter a number" />
-                <button id="btnAdd" class="btn btn-default btn-lg" ng-disabled="applied" ng-click="addStep()">Add step</button>
+                <button id="btnAdd" class="btn btn-default btn-lg" ng-disabled="op.applied" ng-click="op.addStep()">Add step</button>
 				  		</div>
 		  			</div>
 		    	</div>
 		  		<div class="row">
 		  			<div class="col-lg-6">
 		  				<ol id="instructions" class="jumbotron" style="margin-top: 2em;">
-                <li ng-repeat="step in steps">{{ step.operation }} {{ step.operand }}</li>
+                <li ng-repeat="step in op.steps">{{ step.operation }} {{ step.operand }}</li>
 		  				</ol>
 		  			</div>
 		  		</div>
 		  		<div class="row">
 		  			<div class="col-lg-6">
-			  			<button id="btnCalculate" ng-disabled="!applied" class="btn btn-primary btn-lg" ng-click="calculate()">Calculate</button>
-			  			<button id="btnReset" class="btn btn-danger btn-lg" ng-click="reset()">Reset</button>
+			  			<button id="btnCalculate" ng-disabled="!op.applied" class="btn btn-primary btn-lg" ng-click="op.calculate()">Calculate</button>
+			  			<button id="btnReset" class="btn btn-danger btn-lg" ng-click="op.reset()">Reset</button>
 			  		</div>
 		  		</div>
 		  		<div class="row">
 		  			<div class="col-lg-6">
-		  			<h2>Result: <span id="result" class="result">{{result}}</span></h2>
+		  			<h2>Result: <span id="result" class="result">{{op.result}}</span></h2>
 			  		</div>
 		  		</div>
 		  		</p>
