--- a/tests/unit/SpecRunner.html
+++ b/tests/unit/SpecRunner.html
@@ -29,6 +29,9 @@
   <script type="text/javascript" src="OperationControllerSpec.js"></script>
   <script type="text/javascript" src="AddServiceSpec.js"></script>
   <script type="text/javascript" src="SubtractServiceSpec.js"></script>
+  <script type="text/javascript" src="MultiplyServiceSpec.js"></script>
+  <script type="text/javascript" src="DivideServiceSpec.js"></script>
+  <script type="text/javascript" src="FactorySpec.js"></script>
 
 </head>
 <body>
