--- a/tests/unit/SpecRunner.html
+++ b/tests/unit/SpecRunner.html
@@ -32,6 +32,7 @@
   <script type="text/javascript" src="MultiplyServiceSpec.js"></script>
   <script type="text/javascript" src="DivideServiceSpec.js"></script>
   <script type="text/javascript" src="FactorySpec.js"></script>
+  <script type="text/javascript" src="CalculatorServiceSpec.js"></script>
 
 </head>
 <body>
